find_package(Doxygen 1.8.8 REQUIRED
  COMPONENTS dot)

set(DOXYGEN_PROJECT_LOGO novel-chan_doxy.png)

set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_JAVADOC_BANNER YES)
set(DOXYGEN_EXTRACT_PRIV_VIRTUAL YES)
set(DOXYGEN_EXTRACT_STATIC YES)
set(DOXYGEN_CASE_SENSE_NAMES NO)

set(DOXYGEN_HTML_COLORSTYLE_HUE 260)
set(DOXYGEN_HTML_COLORSTYLE_SAT 245)
set(DOXYGEN_HTML_COLORSTYLE_GAMMA 120)

set(DOXYGEN_CALL_GRAPH YES)
set(DOXYGEN_CALLER_GRAPH YES)
set(DOXYGEN_INTERACTIVE_SVG YES)

set(DOXYGEN_USE_MDFILE_AS_MAINPAGE README.md)

doxygen_add_docs(Doxygen ALL
  COMMENT "Generating documentation"
  ${CMAKE_SOURCE_DIR}/README.md
  ${CMAKE_SOURCE_DIR}/include
)
